Kubernetes-manifests/auth-service-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudsync-auth-service
  template:
    metadata:
      labels:
        app: cloudsync-auth-service
    spec:
      containers:
        - name: cloudsync-auth-service-container
          image: sujalsharma/auth-service:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: cloudsync-pv1
              mountPath: /data/db
      volumes:
        - name: cloudsync-pv1
          persistentVolumeClaim:
            claimName: cloudsync-pvc1
