Kubernetes-manifests/notification-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudsync-notification-service
  template:
    metadata:
      labels:
        app: cloudsync-notification-service
    spec:
      containers:
        - name: cloudsync-notification-service-container
          image: sujalsharma/notification-service:1
          ports:
            - containerPort: 8086
          volumeMounts:
            # Mount the config file to the path we specified above
            - name: config-volume
              mountPath: /config/application.yaml
              subPath: application.yaml
              
      volumes:
        # Define the volume from the ConfigMap
        - name: config-volume
          configMap:
            name: notification-service-config
            items:
              - key: application.yaml
                path: application.yaml
