Kubernetes-manifests/tags-generation-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tags-generation-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudsync-tags-generation-service
  template:
    metadata:
      labels:
        app: cloudsync-tags-generation-service
    spec:
      containers:
        - name: cloudsync-tags-generation-service-container
          image: sujalsharma/tags-generation-service:3
          ports:
            - containerPort: 8082
          volumeMounts:
            # Mount the config file to the path we specified above
            - name: config-volume2
              mountPath: /config/application.yaml
              subPath: application.yaml
              
      volumes:
        # Define the volume from the ConfigMap
        - name: config-volume2
          configMap:
            name: tags-generation-service-config
            items:
              - key: application.yaml
                path: application.yaml
