Kubernetes-manifests/upload-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudsync-upload-service
  template:
    metadata:
      labels:
        app: cloudsync-upload-service
    spec:
      containers:
        - name: cloudsync-upload-service-container
          image: sujalsharma/upload-download-rag-pipelin:3
          ports:
            - containerPort: 8083
          volumeMounts:
            # Mount the config file to the path we specified above
            - name: config-volume3
              mountPath: /config/application.yaml
              subPath: application.yaml
              
      volumes:
        # Define the volume from the ConfigMap
        - name: config-volume3
          configMap:
            name: file-service-config
            items:
              - key: application.yaml
                path: application.yaml
