Kubernetes-manifests/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudsync-auth-service-service
  labels:
    app: cloudsync-auth-service
spec:
  selector:
    app: cloudsync-auth-service
  ports:
    - name: http-web
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  sessionAffinity: ClientIP
