Kubernetes-manifests/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudsync-payment-service-service
spec:
  selector:
    app: cloudsync-payment-service
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
  type: ClientIP
  sessionAffinity: ClientIP
