Kubernetes-manifests/search-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudsync-upload-service-service
spec:
  selector:
    app: cloudsync-upload-service
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
  type: ClientIP
  sessionAffinity: ClientIP
