Kubernetes-manifests/tags-generation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudsync-tags-generation-service-service
spec:
  selector:
    app: cloudsync-tags-generation-service
  ports:
    - name: http-web
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
  sessionAffinity: ClientIP
