Kubernetes-manifests/upload-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudsync-upload-service-service
spec:
  selector:
    app: cloudsync-upload-service
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
  sessionAffinity: ClientIP
